# sauvc_ws

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/freefloating_gazebo/: ControlTypeRequest.h  ControlTypeResponse.h
devel/lib/freefloating_gazebo/: butter  pid_body  pid_control  pid_joints  sdf_parse
devel/lib/pkgconfig/: auv_d.pc  auv_simulation.pc  darknet_ros.pc  darknet_ros_msgs.pc  freefloating_gazebo.pc  uwv_control.pc  uwv_description.pc  uwv_env.pc  v2_control.pc  v2_dataset.pc  v2_utility.pc  v2_visual.pc
devel/lib/uwv_control/: sim_remote_control  sim_sampletasks_exe
devel/share/auv_d/cmake/: auv_dConfig.cmake
devel/share/auv_simulation/cmake/: auv_simulationConfig.cmake
devel/share/darknet_ros/cmake/: darknet_rosConfig.cmake
devel/share/darknet_ros_msgs/cmake/: darknet_ros_msgs-msg-extras.cmake  darknet_ros_msgs-msg-paths.cmake  darknet_ros_msgsConfig.cmake
devel/share/freefloating_gazebo/cmake/: freefloating_gazeboConfig.cmake
devel/share/roseus/ros/darknet_ros_msgs/: manifest.l
devel/share/uwv_control/cmake/: uwv_controlConfig.cmake
devel/share/uwv_description/cmake/: uwv_descriptionConfig.cmake
devel/share/uwv_env/cmake/: uwv_envConfig.cmake
devel/share/v2_control/cmake/: v2_controlConfig.cmake
devel/share/v2_dataset/cmake/: v2_datasetConfig.cmake
devel/share/v2_utility/cmake/: v2_utilityConfig.cmake
devel/share/v2_visual/cmake/: v2_visualConfig.cmake
src/uwv-launcher/: .gitignore  CMakeLists.txt  README.md  gen.py  map_ui.py  package.xml  uwv-launcher.py
(+3 files in other folders)
